--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     width: 100px;
     height: 100px;
     cursor: pointer;
+    text-align: center;
+    font-size: 2em;
     
 }
 
@@ -32,3 +34,8 @@
 .bottom {
     border-top: 1px black solid;
 }
+
+h1, h2 {
+    text-align: center;
+}
+
