--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,10 @@
     height: 100px;
     cursor: pointer;
     text-align: center;
-    font-size: 2em;
+    font-size: 3em;
+    display: flex;
+     align-items: center;
+     justify-content: center;
     
 }
 
